--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   rabbitmq:
     image: rabbitmq:3-management
-    container-name: rabbitmq
+    container_name: rabbitmq
     restart: always
     ports:
       - localMachine? : ?
